[gd_scene load_steps=34 format=3 uid="uid://vuy67oyr2buv"]

[ext_resource type="Script" path="res://scenes/persistent_world/persistent_world.gd" id="1_d0fmm"]
[ext_resource type="PackedScene" uid="uid://2rx5e74o2ywa" path="res://components/polyphonic_audio_player.tscn" id="1_jjo3n"]
[ext_resource type="Script" path="res://scripts/custom_resource_bases/audio_library.gd" id="2_fnxn6"]
[ext_resource type="Script" path="res://scripts/custom_resource_bases/sound_effect.gd" id="3_kbgrk"]
[ext_resource type="Resource" uid="uid://d4d15gmw2adx" path="res://resources/sound_effects/jump.tres" id="4_b4hns"]
[ext_resource type="Resource" uid="uid://j4kw01oltuif" path="res://resources/sound_effects/step_on_metal.tres" id="5_gxwxp"]
[ext_resource type="Resource" uid="uid://d3nnfymwgeu7y" path="res://resources/sound_effects/step_on_wood.tres" id="6_gjuca"]
[ext_resource type="Resource" uid="uid://du6dj7yn5fpk0" path="res://resources/sound_effects/hit_metal.tres" id="7_bdtlx"]
[ext_resource type="Resource" uid="uid://6ha7toalxvjw" path="res://resources/sound_effects/hit_wood.tres" id="8_8ujl0"]
[ext_resource type="Resource" uid="uid://b5ll76mlg2cke" path="res://resources/sound_effects/throw.tres" id="9_vcyii"]
[ext_resource type="Resource" uid="uid://0spyh38in14r" path="res://resources/sound_effects/pickup.tres" id="10_c8odm"]
[ext_resource type="Resource" uid="uid://b25ldaflpcuhi" path="res://resources/sound_effects/wall_slide.tres" id="11_gtj4d"]
[ext_resource type="PackedScene" uid="uid://cpl0dv8t2ub1l" path="res://components/menu.tscn" id="13_3njh2"]
[ext_resource type="Resource" uid="uid://dkkd3x2la7bo5" path="res://resources/sound_effects/death.tres" id="13_7vmjv"]
[ext_resource type="AudioStream" uid="uid://7yc38ut7y0iy" path="res://assets/audio/loop1/loop1_floor.wav" id="13_olp22"]
[ext_resource type="AudioStream" uid="uid://3ik8brjku7bx" path="res://assets/audio/loop1/loop1_melody_simple.wav" id="14_v6oq5"]
[ext_resource type="Resource" uid="uid://c2qtf44vs0ev3" path="res://resources/sound_effects/button_up.tres" id="14_y4c1l"]
[ext_resource type="Resource" uid="uid://k3ya5m55rpp2" path="res://resources/sound_effects/button_down.tres" id="15_bvwlx"]
[ext_resource type="AudioStream" uid="uid://d04yr3reynnxv" path="res://assets/audio/loop1/loop1_melody_1.wav" id="15_k4o6o"]
[ext_resource type="AudioStream" uid="uid://cv0305w3ufbj5" path="res://assets/audio/loop1/loop1_melody_2.wav" id="16_d7g2u"]
[ext_resource type="Resource" uid="uid://cr3cegkykhc0x" path="res://resources/sound_effects/jump_chain.tres" id="16_ek3xi"]
[ext_resource type="AudioStream" uid="uid://cn2ke65qvo446" path="res://assets/audio/loop1/loop1_press_space.wav" id="17_rr8qq"]
[ext_resource type="Resource" uid="uid://d038tiwvpcq6g" path="res://resources/sound_effects/dash.tres" id="17_rvm0c"]
[ext_resource type="Resource" uid="uid://eabhxe3trbf2" path="res://resources/sound_effects/charge_throw.tres" id="18_d2lov"]
[ext_resource type="AudioStream" uid="uid://ddoxpbwgh0aaw" path="res://assets/audio/loop1/loop1_press_a_and_d.wav" id="18_ngda1"]
[ext_resource type="AudioStream" uid="uid://ds0xjfctnmjk" path="res://assets/audio/loop1/loop1_pick_it_up.wav" id="19_n05ef"]
[ext_resource type="AudioStream" uid="uid://bo7mpjou04xd1" path="res://assets/audio/loop1/loop1_hold_e_down.wav" id="20_u74ul"]
[ext_resource type="AudioStream" uid="uid://xg2puhc5i385" path="res://assets/audio/outro_lose.wav" id="21_4ilhn"]
[ext_resource type="PackedScene" uid="uid://bmksmki2ey4q8" path="res://components/game_menu.tscn" id="22_e88a6"]
[ext_resource type="AudioStream" uid="uid://hoalki1xc0vr" path="res://assets/audio/intro_song.wav" id="27_04e7u"]
[ext_resource type="AudioStream" uid="uid://dowlo6frpaeyu" path="res://assets/audio/outro_win.wav" id="28_ndrq6"]

[sub_resource type="Resource" id="Resource_wbh1l"]
script = ExtResource("2_fnxn6")
sound_effects = Array[ExtResource("3_kbgrk")]([ExtResource("4_b4hns"), ExtResource("5_gxwxp"), ExtResource("6_gjuca"), ExtResource("7_bdtlx"), ExtResource("8_8ujl0"), ExtResource("9_vcyii"), ExtResource("10_c8odm"), ExtResource("11_gtj4d"), ExtResource("13_7vmjv"), ExtResource("14_y4c1l"), ExtResource("15_bvwlx"), ExtResource("16_ek3xi"), ExtResource("17_rvm0c"), ExtResource("18_d2lov")])

[sub_resource type="AudioStreamSynchronized" id="AudioStreamSynchronized_1jkd1"]
stream_count = 11
stream_0/stream = ExtResource("13_olp22")
stream_0/volume = 0.0
stream_1/stream = ExtResource("14_v6oq5")
stream_1/volume = -60.0
stream_2/stream = ExtResource("15_k4o6o")
stream_2/volume = -60.0
stream_3/stream = ExtResource("16_d7g2u")
stream_3/volume = -60.0
stream_4/stream = ExtResource("17_rr8qq")
stream_4/volume = -60.0
stream_5/stream = ExtResource("18_ngda1")
stream_5/volume = -60.0
stream_6/stream = ExtResource("19_n05ef")
stream_6/volume = -60.0
stream_7/stream = ExtResource("20_u74ul")
stream_7/volume = -60.0
stream_8/stream = ExtResource("27_04e7u")
stream_8/volume = -60.0
stream_9/stream = ExtResource("28_ndrq6")
stream_9/volume = -60.0
stream_10/stream = ExtResource("21_4ilhn")
stream_10/volume = -60.0

[node name="persistent_world" type="Node2D"]
script = ExtResource("1_d0fmm")

[node name="polyphonic_audio_player" parent="." instance=ExtResource("1_jjo3n")]
audio_library = SubResource("Resource_wbh1l")

[node name="music_player" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamSynchronized_1jkd1")
autoplay = true

[node name="current_level_root" type="Node2D" parent="."]

[node name="menu_root" type="Node2D" parent="."]

[node name="main_menu" parent="menu_root" instance=ExtResource("13_3njh2")]

[node name="game_menu" parent="menu_root" instance=ExtResource("22_e88a6")]
